--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -38,7 +38,7 @@ jobs:
     needs: rebase-pr-branch
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
       github.event.pull_request.draft == false
-    runs-on: pvc-1100
+    runs-on: BMG
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -111,7 +111,7 @@ jobs:
   finish:
     if: always()
     needs: [build-and-test]
-    runs-on: pvc-1100
+    runs-on: BMG
     steps:
       - name: Check job status
         run: |
