--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           echo "[placeholder]: will usr build when base image ready"
           docker build --build-arg  \
-          -t sglang-xpu-test  -f docker/Dockerfile.xpu .0
+          -t sglang-xpu-test  -f docker/Dockerfile.xpu .
 
       - name: Run container
         run: |
