--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -2,9 +2,9 @@ name: PR Test (XPU)
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 concurrency:
@@ -19,18 +19,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
         run: |
-          docker build --build-arg  \
-          -t sglang-xpu-test  -f docker/Dockerfile.xpu .
+          docker build \
+            -t sglang-xpu-test \
+            -f docker/Dockerfile.xpu .
 
       - name: Run container
         run: |
+          docker rm -f ci_sglang_xpu || true  
           docker run -dt \
-            -e https_proxy="http://proxy-dmz.intel.com:912/" \
-            -e http_proxy="http://proxy-dmz.intel.com:912/" \
-            -e no_proxy=".intel.com" \
+            -v $PWD:/root/sglang \
             -w /root/sglang \
             --name ci_sglang_xpu \
             sglang-xpu-test
@@ -38,22 +43,30 @@ jobs:
       - name: Install Dependency
         timeout-minutes: 20
         run: |
-          docker exec -w /root/sglang ci_sglang_xpu pip install pytest expecttest ray
-          
+          docker exec ci_sglang_xpu pip install --upgrade pip
+          docker exec ci_sglang_xpu pip install pytest expecttest ray
+
       - name: Run UT Cases
         timeout-minutes: 20
         run: |
           docker exec -w /root/sglang ci_sglang_xpu pytest -v test/srt/test_custom_allreduce.py
-     
+
       - name: Run standard tests
         timeout-minutes: 20
         run: |
-          docker exec -w /root/sglang ci_sglang_xpu pytest python -m sglang.bench_one_batch --batch-size 1 --input 32 --output 32 --model deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B --trust-remote-code --device xpu
+          docker exec -w /root/sglang ci_sglang_xpu \
+            python -m sglang.bench_one_batch \
+            --batch-size 1 \
+            --input 32 \
+            --output 32 \
+            --model deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B \
+            --trust-remote-code \
+            --device xpu
+
       - name: Cleanup container
-        if: always() 
+        if: always()
         run: |
           docker rm -f ci_sglang_xpu || true
-
 
   finish:
     if: always()
@@ -64,6 +77,7 @@ jobs:
         run: |
           if [ "${{ needs.build-and-test.result }}" != "success" ]; then
             echo "Job failed with result: ${{ needs.build-and-test.result }}"
+            echo "BUILD_LOG=$(cat build.log)" >> $GITHUB_ENV
             exit 1
           fi
           echo "All jobs completed successfully"
