--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -58,6 +58,7 @@ jobs:
 
       - name: Run container
         run: |
+          docker rm -f ci_sglang_xpu || true  
           docker run -dt \
             --device /dev/dri/ \
             --name ci_sglang_xpu \
