--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -52,13 +52,13 @@ jobs:
         timeout-minutes: 20
         run: |
           docker exec -w /root/sglang ci_sglang_xpu \
-            /miniforge3/envs/py310/bin/python3 -m sglang.bench_one_batch \
+            /bin/bash -c "source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m sglang.bench_one_batch \
             --batch-size 1 \
             --input 32 \
             --output 32 \
             --model deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B \
             --trust-remote-code \
-            --device xpu
+            --device xpu"
 
       - name: Cleanup container
         if: always()
