--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -1,57 +1,58 @@
-name: PR Test (XPU)
+name: PR Test(XPU)
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  workflow_dispatch:
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
+    workflow_dispatch:
 
 concurrency:
-  group: pr-test-xpu-${{ github.ref }}
-  cancel-in-progress: true
+    group: pr-test-xpu -${{github.ref}}
+    cancel-in -progress: true
 
 jobs:
-  build-and-test:
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
-      github.event.pull_request.draft == false
-    runs-on: pvc-1100
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  
+    build-and -test:
+        if:
+            (github.repository == 'sgl-project/sglang' | | github.event_name == 'pull_request') & &
+            github.event.pull_request.draft == false
+        runs-on: pvc-1100
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+               with:
+                    fetch-depth: 0
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker image
-        run: |
-          echo "[Placeholder] to build docker images "
+            - name: Build Docker image
+              run: |
+                  echo "[Placeholder] to build docker images "
 
-      - name: Run container
-        run: |
-          docker run -dt \
-            --device /dev/dri/ \
-            --name ci_sglang_xpu \
-            sglang_xpu:u2410
+            - name: Run container
+              run: |
+                   docker run - dt \
+                      - -device / dev/dri / \
+                      --name ci_sglang_xpu \
+                      sglang_xpu: u2410
 
-      - name: Install Dependency
-        timeout-minutes: 20
-        run: |
-          docker exec ci_sglang_xpu /miniforge3/envs/py310/bin/python3 -m pip install --upgrade pip
-          docker exec ci_sglang_xpu /miniforge3/envs/py310/bin/python3 -m pip install pytest expecttest ray
+            - name: Install Dependency
+              timeout-minutes: 20
+               run: |
+                    docker exec ci_sglang_xpu / miniforge3/envs/py310/bin/python3 - m pip install - -upgrade pip
+                    docker exec ci_sglang_xpu / miniforge3/envs/py310/bin/python3 - m pip install pytest expecttest ray
 
-      - name: Run UT Cases
-        timeout-minutes: 20
-        run: |
-          echo "[placeholder] UT cases"
+            - name: Run UT Cases
+              timeout-minutes: 20
+               run: |
+                  echo "[placeholder] UT cases"
 
-      - name: Run standard tests
-        timeout-minutes: 20
-        run: |
-          docker exec -w /root/sglang ci_sglang_xpu \
-            /bin/bash -c "source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m sglang.bench_one_batch \
+            - name: Run standard tests
+              timeout-minutes: 20
+               run: |
+                    docker exec - w / root/sglang ci_sglang_xpu \
+                      / bin/bash - c "source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m sglang.bench_one_batch \
             --batch-size 1 \
             --input 32 \
             --output 32 \
@@ -59,22 +60,25 @@ jobs:
             --trust-remote-code \
             --device xpu"
 
-      - name: Cleanup container
-        if: always()
-        run: |
-          docker rm -f ci_sglang_xpu || true
+            - name: Cleanup container
+               if:
+                    always()
+                run: |
+                    docker rm - f ci_sglang_xpu | | true
 
-  finish:
-    if: always()
-    needs: [build-and-test]
-    runs-on: pvc-1100
-    steps:
-      - name: Check job status
-        run: |
-          if [ "${{ needs.build-and-test.result }}" != "success" ]; then
-            echo "Job failed with result: ${{ needs.build-and-test.result }}"
-            echo "BUILD_LOG=$(cat build.log)" >> $GITHUB_ENV
-            exit 1
-          fi
-          echo "All jobs completed successfully"
-          exit 0
+    finish:
+        if:
+            always()
+        needs: [build-and -test]
+        runs-on: pvc-1100
+        steps:
+            - name: Check job status
+              run: |
+                    if ["${{ needs.build-and-test.result }}" != "success" ]
+                    then
+                      echo "Job failed with result: ${{ needs.build-and-test.result }}"
+                       echo "BUILD_LOG=$(cat build.log)" >> $GITHUB_ENV
+                        exit 1
+                    fi
+                    echo "All jobs completed successfully"
+                    exit 0
