--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -1,4 +1,4 @@
-name: PR Test(XPU)
+name: PR Test (XPU)
 
 on:
   pull_request:
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:
 
 concurrency:
-    group: pr-test-xpu -${{github.ref}}
-    cancel-in -progress: true
+  group: pr-test-xpu-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   rebase-pr-branch:
@@ -45,8 +45,8 @@ jobs:
         with:
           fetch-depth: 0
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
         run: |
@@ -56,12 +56,12 @@ jobs:
           -f ${{ github.workspace }}/docker/Dockerfile.xpu -t sglang_xpu:u2410 .
 
 
-            - name: Run container
-              run: |
-                   docker run - dt \
-                      - -device / dev/dri / \
-                      --name ci_sglang_xpu \
-                      sglang_xpu: u2410
+      - name: Run container
+        run: |
+          docker run -dt \
+            --device /dev/dri/ \
+            --name ci_sglang_xpu \
+            sglang_xpu:u2410
 
       - name: Install Dependency
         timeout-minutes: 20
@@ -76,11 +76,11 @@ jobs:
           docker exec -w /root/sglang ci_sglang_xpu \
             /bin/bash -c "cd /root/sglang/sgl-kernel/tests && source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m pytest -v -s test_awq_dequant.py"
 
-            - name: Run standard tests
-              timeout-minutes: 20
-               run: |
-                    docker exec - w / root/sglang ci_sglang_xpu \
-                      / bin/bash - c "source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m sglang.bench_one_batch \
+      - name: Run standard tests
+        timeout-minutes: 20
+        run: |
+          docker exec -w /root/sglang ci_sglang_xpu \
+            /bin/bash -c "source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m sglang.bench_one_batch \
             --batch-size 1 \
             --input 32 \
             --output 32 \
@@ -108,19 +108,17 @@ jobs:
         run: |
           docker rm -f ci_sglang_xpu || true
 
-    finish:
-        if:
-            always()
-        needs: [build-and -test]
-        runs-on: pvc-1100
-        steps:
-            - name: Check job status
-              run: |
-                    if ["${{ needs.build-and-test.result }}" != "success" ]
-                    then
-                      echo "Job failed with result: ${{ needs.build-and-test.result }}"
-                       echo "BUILD_LOG=$(cat build.log)" >> $GITHUB_ENV
-                        exit 1
-                    fi
-                    echo "All jobs completed successfully"
-                    exit 0
+  finish:
+    if: always()
+    needs: [build-and-test]
+    runs-on: pvc-1100
+    steps:
+      - name: Check job status
+        run: |
+          if [ "${{ needs.build-and-test.result }}" != "success" ]; then
+            echo "Job failed with result: ${{ needs.build-and-test.result }}"
+            echo "BUILD_LOG=$(cat build.log)" >> $GITHUB_ENV
+            exit 1
+          fi
+          echo "All jobs completed successfully"
+          exit 0
