--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build --progress=plain --secret id=github_token,src=/home/sdp/github_token.txt \
+          docker build --no-cache --progress=plain --secret id=github_token,src=/home/sdp/github_token.txt \
           --build-arg SG_LANG_REPO=${{ github.server_url }}/${{ github.event.pull_request.head.repo.full_name }}.git  \
           --build-arg SG_LANG_BRANCH=${{ github.head_ref || github.ref_name }} \
           -f ${{ github.workspace }}/docker/Dockerfile.xpu -t sglang_xpu:u2410 .
@@ -66,7 +66,7 @@ jobs:
       - name: Install Dependency
         timeout-minutes: 20
         run: |
-          docker exec ci_sglang_xpu bash -c "cd /root/sglang/sgl-kernel && mv pyproject_sycl.toml pyproject.toml && /miniforge3/envs/py310/bin/python3 -m pip install -v ."
+          docker exec ci_sglang_xpu bash -c "cd /root/sglang/sgl-kernel && mv pyproject_sycl.toml pyproject.toml && source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m pip install -v ."
           docker exec ci_sglang_xpu /miniforge3/envs/py310/bin/python3 -m pip install --upgrade pip
           docker exec ci_sglang_xpu /miniforge3/envs/py310/bin/python3 -m pip install pytest expecttest ray
 
