--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -73,7 +73,8 @@ jobs:
       - name: Run UT Cases
         timeout-minutes: 20
         run: |
-          echo "[placeholder] UT cases"
+          docker exec -w /root/sglang ci_sglang_xpu \
+            /bin/bash -c "cd /root/sglang/sgl-kernel/tests && source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m pytest -v -s test_swq_dequant.py"
 
       - name: Run standard tests
         timeout-minutes: 20
@@ -88,6 +89,20 @@ jobs:
             --mem-fraction-static 0.3 \
             --device xpu"
 
+      - name: Run Qunatization tests
+        timeout-minutes: 20
+        run: |
+          docker exec -w /root/sglang ci_sglang_xpu \
+            /bin/bash -c "source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m sglang.bench_one_batch \
+            --batch-size 1 \
+            --input 32 \
+            --output 32 \
+            --model hugging-quants/Meta-Llama-3.1-8B-Instruct-AWQ-INT4 \
+            --tp 1\
+            --trust-remote-code \
+            --mem-fraction-static 0.3 \
+            --device xpu"
+            
       - name: Cleanup container
         if: always()
         run: |
