--- a/.github/workflows/pr-test-xpu.yml
+++ b/.github/workflows/pr-test-xpu.yml
@@ -74,7 +74,7 @@ jobs:
         timeout-minutes: 20
         run: |
           docker exec -w /root/sglang ci_sglang_xpu \
-            /bin/bash -c "cd /root/sglang/sgl-kernel/tests && source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m pytest -v -s test_swq_dequant.py"
+            /bin/bash -c "cd /root/sglang/sgl-kernel/tests && source /opt/intel/oneapi/setvars.sh && /miniforge3/envs/py310/bin/python3 -m pytest -v -s test_awq_dequant.py"
 
       - name: Run standard tests
         timeout-minutes: 20
