--- a/sgl-kernel/pyproject.toml
+++ b/sgl-kernel/pyproject.toml
@@ -1,7 +1,8 @@
 [build-system]
 requires = [
   "scikit-build-core>=0.10",
-  "torch>=2.6.0",
+  "pytorch-triton-xpu @ https://download.pytorch.org/whl/test/pytorch_triton_xpu-3.3.0-cp310-cp310-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl",
+  "torch @ https://download.pytorch.org/whl/test/xpu/torch-2.7.0%2Bxpu-cp310-cp310-linux_x86_64.whl",
   "wheel",
 ]
 build-backend = "scikit_build_core.build"
@@ -16,7 +17,7 @@ license = { file = "LICENSE" }
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: Apache Software License",
-  "Environment :: GPU :: NVIDIA CUDA"
+  "Environment :: GPU"
 ]
 dependencies = []
 
@@ -31,9 +32,9 @@ exclude = [
 ]
 
 [tool.scikit-build]
+cmake.source-dir = "csrc/xpu"
 cmake.build-type = "Release"
 minimum-version = "build-system.requires"
 
-wheel.py-api = "cp39"
 wheel.license-files = []
 wheel.packages = ["python/sgl_kernel"]
